tests/int/use_command/snapshots/integration__int__use_command__flags__modules_lib_flags_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::empty_module::Standalone

----- stderr -----
